# trailcast

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  architecture.md  conditions-model.md
docs/adr/: 001-http-server.md
docs/plans/: architectural-priorities.md
src/trailcast/: __init__.py  cache.py  exceptions.py  models.py
src/trailcast/cli/: __init__.py  main.py
src/trailcast/forecast/: __init__.py  engine.py
src/trailcast/server/: __init__.py  app.py  dependencies.py
src/trailcast/soil/: __init__.py  era5.py  soilgrids.py
src/trailcast/terrain/: __init__.py  analyzer.py
src/trailcast/weather/: __init__.py  client.py
tests/: conftest.py  test_cache.py  test_models.py
tests/cli/: test_cli.py
tests/fixtures/: peak_district_polyline.py
tests/forecast/: test_forecast.py
tests/server/: test_app.py  test_dependencies.py
tests/soil/: test_soil.py
tests/terrain/: test_terrain.py
tests/weather/: test_weather.py
