[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trailcast"
version = "0.1.0"
description = "Predictive trail conditions for mountain biking — fuses weather, soil type, terrain geometry and ride-density signals to forecast rideability from a GPS polyline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "Joe Heffer", email = "jheffer@gmail.com" }]
keywords = ["mountain-biking", "trail-conditions", "weather", "forecast", "gps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "stamina>=24.2",
    "hishel>=0.1.5,<1.0",
    "typer>=0.12",
    "pyet>=1.2",
    "cdsapi>=0.7",
    "xarray>=2024.1",
    "netCDF4>=1.7",
]

[project.optional-dependencies]
# richdem has a C++ build dependency and may require system libs.
# If `pip install trailcast[terrain-full]` fails, install xarray-spatial instead:
#   pip install xarray-spatial
# pysheds requires rasterio (GDAL). On Linux: apt-get install libgdal-dev
terrain-full = [
    "richdem>=0.3",
    "pysheds>=0.4",
]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
trailcast = "trailcast.cli.__main__:app"

[project.urls]
Homepage = "https://github.com/joe-heffer/trailcast"
Repository = "https://github.com/joe-heffer/trailcast"
Issues = "https://github.com/joe-heffer/trailcast/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/trailcast"]

# ── Environments ──────────────────────────────────────────────────────────────

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
    "pandas-stubs>=2.2",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "hypothesis>=6.100",
    "pytest-asyncio>=0.23",
    "fastapi>=0.111",
    "httpx[http2]>=0.27",
    "pytest-cov>=5.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest --cov=src/trailcast --cov-report=xml --cov-report=term-missing {args:tests}"

[tool.hatch.envs.lint]
dependencies = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pandas-stubs>=2.2",
    "fastapi>=0.111",
]

[tool.hatch.envs.lint.scripts]
check = ["ruff check .", "ruff format --check ."]
fmt = "ruff format ."
typecheck = "mypy src/"

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "pyet",
    "pyet.*",
    "pysheds",
    "pysheds.*",
    "richdem",
    "richdem.*",
    "scipy",
    "scipy.*",
    "pyproj",
    "pyproj.*",
    "shapely",
    "shapely.*",
    "cdsapi",
    "cdsapi.*",
    "uvicorn",
    "uvicorn.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/trailcast"]
branch = true
omit = ["**/__init__.py", "**/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
